--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -95,20 +95,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/lucperkins/colossus">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
@@ -126,6 +112,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17193453" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://jeeliz.com/demos/faceFilter/demos/faceReplacement/faceSwap/">JavaScript/WebGL webcam face swap with color correction</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17188973" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://faviconkit.com/?ref=hackernews">Favicon Kit – get and embed Favicons from any web site (CDN and API)</a>
                                 </span>
                             </td>
                         </tr>
@@ -556,7 +556,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527874804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527875404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
