--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -495,17 +495,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
+                                    <a href="https://arxiv.org/abs/1002.2284">Markets are efficient if and only if P = NP (2010)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17202950">
                                         
-                                            282 comments
+                                            164 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527779559"
+                                            href="https://news.ycombinator.com/user?id=perculis">perculis</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527833099"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     301 points
                                 </span>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://hackertarget.com/tcpdump-examples">Tcpdump Examples</a>
+                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17177955">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
                                         
-                                            39 comments
+                                            282 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527590950"
+                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779559"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     301 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527875404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527876004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
