--- a/jobs/index.html
+++ b/jobs/index.html
@@ -161,7 +161,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="None">Sourceress (YC S17) is hiring machine learning/NLP engineers who love learning</a>
+                                    <a href="None">Sourceress (YC S17) is hiring ML & product engineers who love learning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -551,7 +551,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527877204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527877805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
