--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -375,19 +375,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://blog.netbsd.org/tnf/entry/network_security_audit">NetBSD Network Security Audit</a>
+                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17171033">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
                                         
-                                            32 comments
+                                            215 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527492091"
+                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527861562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    191 points
+                                    192 points
                                 </span>
                             </td>
                         </tr>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Penniless Yogi Baba Ramdev Controls a Billion-Dollar Corporation</a>
+                                    <a href="http://blog.netbsd.org/tnf/entry/network_security_audit">NetBSD Network Security Audit</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17165532">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17171033">
                                         
-                                            145 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527398284"
+                                            href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527492091"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     191 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527877805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527878404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
