--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -381,7 +381,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17199860">
                                         
-                                            84 comments
+                                            86 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
+                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
                                         
-                                            71 comments
+                                            222 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527749697"
+                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527861562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     199 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527879005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527879604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
