--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -501,7 +501,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17201485">
                                         
-                                            105 comments
+                                            106 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=trumped">trumped</a></strong> &nbsp;•&nbsp;
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/facebookincubator/katran">Katran: A high-performance layer 4 load balancer</a>
+                                    <a href="https://support.google.com/faqs/answer/174717?hl=en">What is 1e100.net?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199921">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17208004">
                                         
-                                            17 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=SriniK">SriniK</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527798541"
+                                            href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527875296"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     99 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527882004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527882604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
