--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://trac.torproject.org/projects/tor/wiki/org/meetings/2018Rome/Notes/FusionProject">Mozilla Project Fusion: Tor Integration into Firefox</a>
+                                    <a href="https://digiday.com/media/gdpr-mayhem-programmatic-ad-buying-plummets-europe/">GDPR: Programmatic ad buying plummets in Europe</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205441">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17159946">
                                         
-                                            158 comments
+                                            395 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527862181"
+                                            href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527303771"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    389 points
+                                    390 points
                                 </span>
                             </td>
                         </tr>
@@ -309,13 +309,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17196415">
                                         
-                                            125 comments
+                                            127 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=johannh">johannh</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527775834"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    366 points
+                                    367 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527885004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527885603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
