--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -81,20 +81,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183241" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/ry/deno">Deno, a secure TypeScript runtime using V8 and Go</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
@@ -126,6 +112,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17188973" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://faviconkit.com/?ref=hackernews">Favicon Kit – get and embed Favicons from any web site (CDN and API)</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
                                 </span>
                             </td>
                         </tr>
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527765786"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    334 points
+                                    335 points
                                 </span>
                             </td>
                         </tr>
@@ -507,7 +507,7 @@
                                             href="https://news.ycombinator.com/user?id=perculis">perculis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527833099"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    315 points
+                                    316 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527890404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527891003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
