--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -495,17 +495,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://work.qz.com/1289727/vermont-will-pay-you-10000-to-move-there-and-work-remotely/">Vermont will cover $10K of expenses for people who move there and work remotely</a>
+                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196507">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
                                         
-                                            188 comments
+                                            282 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=swlkr">swlkr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527776611"
+                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527861562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     268 points
                                 </span>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
+                                    <a href="https://work.qz.com/1289727/vermont-will-pay-you-10000-to-move-there-and-work-remotely/">Vermont will cover $10K of expenses for people who move there and work remotely</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17183057">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196507">
                                         
-                                            467 comments
+                                            188 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527629280"
+                                            href="https://news.ycombinator.com/user?id=swlkr">swlkr</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527776611"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     268 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527891603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527892204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
