--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
+                                    <a href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17183057">
                                         
-                                            281 comments
+                                            467 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527861562"
+                                            href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527629280"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    264 points
+                                    268 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527891603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527892204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
