--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://trac.torproject.org/projects/tor/wiki/org/meetings/2018Rome/Notes/FusionProject">Mozilla Project Fusion: Tor Integration into Firefox</a>
+                                    <a href="https://twitter.com/fr3ino/status/1000166112615714816?s=19">GDPR Version of USA Today Is 500KB Instead of 5.2MB</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205441">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17162000">
                                         
-                                            185 comments
+                                            205 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527862181"
+                                            href="https://news.ycombinator.com/user?id=brundolf">brundolf</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527342656"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    461 points
+                                    462 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527892804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527893405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
