--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.sfchronicle.com/business/article/Energy-revolution-California-approves-massive-12957685.php">California approves $768M for electric vehicles</a>
+                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208876">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
                                         
-                                            193 comments
+                                            75 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527880046"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527749697"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    199 points
+                                    200 points
                                 </span>
                             </td>
                         </tr>
@@ -309,7 +309,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17203825">
                                         
-                                            169 comments
+                                            170 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=oxinabox">oxinabox</a></strong> &nbsp;•&nbsp;
@@ -459,7 +459,7 @@
                                             href="https://news.ycombinator.com/user?id=ofrzeta">ofrzeta</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527854280"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    174 points
+                                    175 points
                                 </span>
                             </td>
                         </tr>
@@ -531,7 +531,7 @@
                                             href="https://news.ycombinator.com/user?id=Vinnl">Vinnl</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527847167"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    162 points
+                                    163 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527898803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527899403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
