--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -195,7 +195,7 @@
                                             href="https://news.ycombinator.com/user?id=johannh">johannh</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527775834"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    369 points
+                                    370 points
                                 </span>
                             </td>
                         </tr>
@@ -507,7 +507,7 @@
                                             href="https://news.ycombinator.com/user?id=wallace_f">wallace_f</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527786363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    260 points
+                                    261 points
                                 </span>
                             </td>
                         </tr>
@@ -573,6 +573,7 @@
             <!--</div>-->
         </div>
     </div>
+    <div class="c"></div>
     <div class="sep20 desktopLargeSep"></div>
 </div>
 <div id="Bottom">
@@ -580,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527899403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527900004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
