--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -213,13 +213,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208892">
                                         
-                                            95 comments
+                                            97 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527880151"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    108 points
                                 </span>
                             </td>
                         </tr>
@@ -450,6 +450,7 @@
             <!--</div>-->
         </div>
     </div>
+    <div class="c"></div>
     <div class="sep20 desktopLargeSep"></div>
 </div>
 <div id="Bottom">
@@ -457,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527899403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527900004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
