--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -261,7 +261,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17209127">
                                         
-                                            127 comments
+                                            129 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
@@ -573,6 +573,7 @@
             <!--</div>-->
         </div>
     </div>
+    <div class="c"></div>
     <div class="sep20 desktopLargeSep"></div>
 </div>
 <div id="Bottom">
@@ -580,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527899403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527900004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
