--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=henryjones">henryjones</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527724639"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    433 points
+                                    434 points
                                 </span>
                             </td>
                         </tr>
@@ -573,6 +573,7 @@
             <!--</div>-->
         </div>
     </div>
+    <div class="c"></div>
     <div class="sep20 desktopLargeSep"></div>
 </div>
 <div id="Bottom">
@@ -580,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527899403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527900004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
