--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -573,6 +573,7 @@
             <!--</div>-->
         </div>
     </div>
+    <div class="c"></div>
     <div class="sep20 desktopLargeSep"></div>
 </div>
 <div id="Bottom">
@@ -580,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527899403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527900004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
