--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17210378" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
+                                    <a href="https://github.com/stereobooster/react-ideal-image/blob/master/introduction.md">An Almost Ideal React Image Component</a>
                                 </span>
                             </td>
                         </tr>
@@ -381,7 +381,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17203304">
                                         
-                                            453 comments
+                                            456 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=madmax108">madmax108</a></strong> &nbsp;•&nbsp;
@@ -411,7 +411,7 @@
                                             href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527862181"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    520 points
+                                    522 points
                                 </span>
                             </td>
                         </tr>
@@ -575,7 +575,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527900604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527901203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
