--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17210378" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
+                                    <a href="https://github.com/stereobooster/react-ideal-image/blob/master/introduction.md">An Almost Ideal React Image Component</a>
                                 </span>
                             </td>
                         </tr>
@@ -557,7 +557,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527900604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527901203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
