--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -405,7 +405,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211679">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Jerry2">Jerry2</a></strong> &nbsp;•&nbsp;
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527904803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527905404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
