--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -195,7 +195,7 @@
                                             href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527883700"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    81 points
+                                    82 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527867356"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    72 points
+                                    73 points
                                 </span>
                             </td>
                         </tr>
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527884753"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    54 points
+                                    56 points
                                 </span>
                             </td>
                         </tr>
@@ -495,19 +495,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://fex.rus.uni-stuttgart.de/">F*EX – Frams' Fast File EXchange</a>
+                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17210537">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
                                         
-                                            13 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527888491"
+                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527894417"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    45 points
+                                    48 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.sindresorhus.com/my-macos-10-14-wishlist-c499448afdd6">MacOS 10.14 Wishlist</a>
+                                    <a href="https://www.nesdis.noaa.gov/content/goes-17-releases-%E2%80%98first-light%E2%80%99-imagery-its-advanced-baseline-imager-abi">GOES-17 Releases ‘First Light’ Imagery from Its Advanced Baseline Imager</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17209119">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211311">
                                         
-                                            61 comments
+                                            5 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mofle">mofle</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527881316"
+                                            href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527894670"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     45 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527909003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527909605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
