--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -501,7 +501,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17205877">
                                         
-                                            46 comments
+                                            48 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=scentoni">scentoni</a></strong> &nbsp;•&nbsp;
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/facebookincubator/katran">Katran: A high-performance layer 4 load balancer</a>
+                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199921">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
                                         
-                                            20 comments
+                                            75 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=SriniK">SriniK</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527798541"
+                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527894417"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    101 points
+                                    102 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527919204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527919803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
