--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -81,9 +81,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17210378" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
+                                    <a href="https://github.com/stereobooster/react-ideal-image/blob/master/introduction.md">An Almost Ideal React Image Component</a>
                                 </span>
                             </td>
                         </tr>
@@ -95,9 +95,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17210378" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/stereobooster/react-ideal-image/blob/master/introduction.md">An Almost Ideal React Image Component</a>
+                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
                                 </span>
                             </td>
                         </tr>
@@ -357,13 +357,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208065">
                                         
-                                            172 comments
+                                            175 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spacebearmakes">spacebearmakes</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527875660"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    144 points
+                                    151 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-05-30/buffett-said-to-have-offered-uber-3-billion-but-talks-crumbled">Buffett Proposed $3 Billion Uber Investment But Deal Crumbled</a>
+                                    <a href="https://gizmodo.com/google-plans-not-to-renew-its-contract-for-project-mave-1826488620">Google Won't Renew Contract for Project Maven, Pentagon Drone AI Imaging Program</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17191307">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17208892">
                                         
-                                            80 comments
+                                            104 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527711050"
+                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527880151"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     123 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527922204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527922804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
