--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://phys.org/news/2018-05-aim-stars-rocket.html">A 'self-eating' rocket engine could put satellites in orbit more easily</a>
+                                    <a href="http://theprovince.com/pmn/news-pmn/canada-news-pmn/newsalert-canada-responds-to-u-s-tariffs-with-its-own-countermeasures/">Canada hits back at 'punitive' U.S. tariffs in 'turning point' in relations</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17209456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201485">
                                         
-                                            35 comments
+                                            107 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527882885"
+                                            href="https://news.ycombinator.com/user?id=trumped">trumped</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527812672"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    104 points
+                                    106 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527922804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527923403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
