--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.esquire.com/news-politics/a12149389/robert-noyce-tom-wolfe/">The Tinkerings of Robert Noyce (1983)</a>
+                                    <a href="https://www.newscientist.com/article/2170532-people-with-big-brains-have-a-different-brain-structure-too/">People with big brains have a different brain structure too</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17212210">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205073">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=troydavis">troydavis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527905153"
+                                            href="https://news.ycombinator.com/user?id=laurex">laurex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527859842"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527922804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527923403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
