--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://support.google.com/faqs/answer/174717?hl=en">What is 1e100.net?</a>
+                                    <a href="https://adguard.com/en/blog/goodbye-amazon/">Amazon follows Google and Apple and bans system-wide ad blockers on app store</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208004">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196888">
                                         
-                                            108 comments
+                                            288 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527875296"
+                                            href="https://news.ycombinator.com/user?id=ameshkov">ameshkov</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779559"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    305 points
+                                    306 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527928204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527928804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
